crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_auth_info_with_env_default.snap
---
source: crates/shipper-auth/src/lib.rs
expression: info
---
AuthInfo {
    token: Some(
        "tok-from-env",
    ),
    source: EnvDefault,
    detected: true,
}
