crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_credentials_file_with_all_formats.snap
---
source: crates/shipper-auth/src/lib.rs
expression: "(crates_io, custom)"
---
(
    "registry-section",
    "custom-registry",
)
