crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_list_registries_many.snap
---
source: crates/shipper-auth/src/lib.rs
expression: registries
---
[
    "alpha",
    "beta",
    "crates-io",
    "delta",
    "gamma",
]
