crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_mask_token_long_value.snap
---
source: crates/shipper-auth/src/lib.rs
expression: "mask_token(\"abcdefghijklmnopqrstuvwxyz\")"
---
"abcd****wxyz"
