crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_resolve_unicode_token.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "tök€n_πλ∞",
    ),
    source: EnvDefault,
    detected: true,
}
