crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_resolve_whitespace_token.snap
---
source: crates/shipper-auth/src/lib.rs
expression: auth
---
AuthInfo {
    token: Some(
        "   ",
    ),
    source: EnvDefault,
    detected: true,
}
