crates/shipper-auth/src/snapshots/shipper_auth__tests__edge_snapshots__snapshot_token_source_credentials_file.snap
---
source: crates/shipper-auth/src/lib.rs
expression: "TokenSource::CredentialsFile"
---
CredentialsFile
